syntax = "proto3";

package author;

option go_package = "github.com/AlyxPink/meower/api/proto;proto";

service AuthorService {
  rpc CreateAuthor(CreateAuthorRequest) returns (CreateAuthorResponse) {}
  rpc GetAuthor(GetAuthorRequest) returns (GetAuthorResponse) {}
  rpc IndexAuthor(IndexAuthorRequest) returns (IndexAuthorResponse) {}
}

message Author {
  string id = 1;
  string name = 2;
  string created_at = 3;
}

message CreateAuthorRequest {
  string name = 1;
}
message CreateAuthorResponse {
  Author author = 1;
}

message GetAuthorRequest {
  string id = 1;
}
message GetAuthorResponse {
  Author author = 1;
}

message IndexAuthorRequest {}
message IndexAuthorResponse {
  repeated Author authors = 1;
}
